fix display size in dashbord

--- a/public/static/dashboard.html
+++ b/public/static/dashboard.html
@@ -29,10 +29,11 @@
     <style>
         * {
             font-family: sans-serif;
+            font-size: 48px;
         }
 
         table {
-            width: 300px;
+            width: 600px;
         }
 
         tr {
@@ -82,7 +83,7 @@
                     label.appendChild(head);
                     var buttom = document.createElement('td');
                     var thumb = document.createElement('img');
-                    thumb.setAttribute('width', "300px");
+                    thumb.setAttribute('width', "600px");
                     thumb.setAttribute('src', playlist.metadate.thumbs);
                     buttom.appendChild(thumb);
                     thumbs.appendChild(buttom);
